testdata/baselines/reference/submodule/conformance/importTag15(module=es2015).errors.txt
1.js(1,30): error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext', 'nodenext', or 'preserve'.
1.js(1,30): error TS2857: Import attributes cannot be used with type-only imports or exports.
1.js(2,33): error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext', 'nodenext', or 'preserve'.
1.js(2,33): error TS2857: Import attributes cannot be used with type-only imports or exports.


==== 0.ts (0 errors) ====
    export interface I { }
    
==== 1.js (4 errors) ====
    /** @import { I } from './0' with { type: "json" } */
                                 ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext', 'nodenext', or 'preserve'.
                                 ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2857: Import attributes cannot be used with type-only imports or exports.
    /** @import * as foo from './0' with { type: "json" } */
                                    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext', 'nodenext', or 'preserve'.
                                    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2857: Import attributes cannot be used with type-only imports or exports.
    
    /** @param {I} a */
    function f(a) {}
    